# smart-restaurant-menu

./: .dockerignore  .env.example  .gitignore  AGENTS.md  PRD.md  README.md  TASK.md  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json
apps/api/: .env.example  AGENTS.md  Cargo.toml  Dockerfile
apps/api/migrations/: 001_users.sql  002_refresh_tokens.sql  003_projects.sql  004_project_themes.sql  005_menu_catalog.sql  006_uploads_dir.sql  007_tables.sql  008_guest_sessions.sql  009_order_estimated_minutes.sql  010_refresh_token_reuse.sql  011_indexes.sql  012_order_status_index.sql  013_service_requests_project_index.sql
apps/api/src/: config.rs  error.rs  lib.rs  main.rs  rate_limit.rs  state.rs  storage.rs
apps/api/src/auth/: jwt.rs  middleware.rs  mod.rs  models.rs  password.rs  repository.rs  service.rs
apps/api/src/menu/: models.rs  repository.rs  service.rs
apps/api/src/menu/repository/: allergens_tags.rs  categories.rs  items.rs  modifiers.rs
apps/api/src/menu/service/: allergens_tags.rs  categories.rs  helpers.rs  items.rs  modifiers.rs  tree.rs
apps/api/src/projects/: models.rs  repository.rs  service.rs
apps/api/src/routes/: auth.rs  health.rs  menu.rs  mod.rs  projects.rs  tables.rs  uploads.rs  venue.rs
apps/api/src/tables/: models.rs  repository.rs  service.rs
apps/api/src/venue/: models.rs  repository.rs
apps/api/tests/: auth_test.rs  health_test.rs  menu_test.rs  orders_admin_test.rs  projects_test.rs  service_requests_admin_test.rs  tables_test.rs  venue_test.rs
apps/api/tests/common/: mod.rs
(+484 files in other folders)
